--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1399,7 +1399,7 @@ html {
 }
 .article-summary {
     display: -webkit-box;
-    -webkit-line-clamp: 3; /* Maksimal 3 baris */
+     /* Maksimal 3 baris */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -1409,7 +1409,7 @@ html {
 
 .article-title {
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* Maksimal 2 baris */
+     /* Maksimal 2 baris */
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
